--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 }
 body{
     min-height: 100vh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container{
@@ -63,7 +63,6 @@ nav{
         width: 100%;
         max-width: 1400px;
         margin: 0 auto;
-        border: 4px solid #000;
     }
     button#genBtn.getBtn{
         display: none;
