--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,6 @@ body{
 .colors{
     padding: 1.8em;
     text-align: center;
-
 }
 #color-value{
     filter: invert(100%);
@@ -28,6 +27,7 @@ body{
     border-radius: 0.3em;
     padding: 0.4em;
     &:hover,&:focus,&:active{
+        
     }
     cursor: pointer;
 
@@ -56,6 +56,7 @@ nav{
     color: #f3f3f3;
     text-align: center;
     padding: 1.8em;
+    text-shadow: 1px 2px #000;
 }
 
 @media (min-width: 601px){
