--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,7 @@ body {
   text-align: center;
 }
 .color-value {
-  filter: invert(100%);
+  // filter: invert(100%);
   font-weight: bold;
   display: inline-block;
   border: 3px solid #353535;
